finish stage1, need to complete unit tests